--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,5 +1,5 @@
 name: elixir
-version: 0.0.5
+version: 0.0.6
 type: main
 platform: ubuntu@12.04
 description: box with erlang, elixir and rebar
@@ -8,15 +8,16 @@ keywords:
   - erlang
   - rebar
 packages:
-  - erlang@R16B03
-  - elixir@0.12.4
+  - erlang@OTP_17.0-rc1
+  - elixir@0.13.0-dev
   - rebar@2.1.0
 script : |
   sudo apt-get update
   sudo apt-get install -yq build-essential wget libncurses5-dev openssl libssl-dev fop xsltproc libxml2-utils unixodbc-dev git-core
-  wget http://www.erlang.org/download/otp_src_R16B03-1.tar.gz
-  tar -xzvf otp_src_R16B03-1.tar.gz
-  cd otp_src_R16B03-1
+  git clone https://github.com/erlang/otp erlang
+  cd erlang
+  git checkout OTP_17.0-rc1
+  ./otp_build autoconf
   ./configure --enable-m64-build --enable-hipe --enable-threads --enable-dynamic-ssl-lib --enable-shared-zlib --enable-smp-support
   sudo make install
   cd -
@@ -26,8 +27,8 @@ script : |
   make
   sudo mv rebar /bin/
   cd -
-  wget https://github.com/elixir-lang/elixir/archive/v0.12.4.tar.gz -O elixir-0.12.4.tar.gz
-  tar zxvf elixir-0.12.4.tar.gz
-  cd elixir-0.12.4
+  git clone https://github.com/elixir-lang/elixir
+  cd elixir
+  git checkout v0.13
   sudo make install
   cd -
