--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -13,7 +13,7 @@ packages:
   - rebar@2.1.0
 script : |
   sudo apt-get update
-  sudo apt-get install -yq build-essential wget libncurses5-dev openssl libssl-dev fop xsltproc libxml2-utils unixodbc-dev git-core
+  sudo apt-get install -yq build-essential autoconf wget libncurses5-dev openssl libssl-dev fop xsltproc libxml2-utils unixodbc-dev git-core
   git clone https://github.com/erlang/otp erlang
   cd erlang
   git checkout OTP_17.0-rc1
