--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -8,19 +8,14 @@ keywords:
   - erlang
   - rebar
 packages:
-  - erlang@OTP_17.0-rc1
+  - erlang@OTP_17.0-1
   - elixir@0.13.0-dev
   - rebar@2.1.0
 script : |
   sudo apt-get update
   sudo apt-get install -yq build-essential autoconf wget libncurses5-dev openssl libssl-dev fop xsltproc libxml2-utils unixodbc-dev git-core
-  git clone https://github.com/erlang/otp erlang
-  cd erlang
-  git checkout OTP_17.0-rc1
-  ./otp_build autoconf
-  ./configure --enable-m64-build --enable-hipe --enable-threads --enable-dynamic-ssl-lib --enable-shared-zlib --enable-smp-support
-  sudo make install
-  cd -
+  wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_17.0-1~ubuntu~precise_amd64.deb
+  sudo dpkg -i esl-erlang_17.0-1~ubuntu~precise_amd64.deb
   wget https://github.com/rebar/rebar/archive/2.1.0.tar.gz -O rebar-2.1.0.tar.gz
   tar zxvf rebar-2.1.0.tar.gz
   cd rebar-2.1.0
@@ -29,6 +24,6 @@ script : |
   cd -
   git clone https://github.com/elixir-lang/elixir
   cd elixir
-  git checkout v0.13
+  git checkout master
   sudo make install
   cd -
