--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -13,7 +13,7 @@ packages:
   - rebar@2.1.0
 script : |
   sudo apt-get update
-  sudo apt-get install -yq build-essential autoconf wget libncurses5-dev openssl libssl-dev fop xsltproc libxml2-utils unixodbc-dev git-core libwxbase2.8-0
+  sudo apt-get install -yq build-essential autoconf wget libncurses5-dev openssl libssl-dev fop xsltproc libxml2-utils unixodbc-dev git-core libwxbase2.8-0 libwxgtk2.8-0
   wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_17.0-1~ubuntu~precise_amd64.deb
   sudo dpkg -i esl-erlang_17.0-1~ubuntu~precise_amd64.deb
   wget https://github.com/rebar/rebar/archive/2.1.0.tar.gz -O rebar-2.1.0.tar.gz
