Add curl to box for steps

--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,5 +1,5 @@
 name: elixir
-version: 0.2.0
+version: 0.2.1
 type: main
 platform: ubuntu@12.04
 description: box with erlang, elixir and rebar
@@ -13,7 +13,7 @@ packages:
   - rebar@2.5.1
 script : |
   sudo apt-get update
-  sudo apt-get install -yq build-essential autoconf wget libncurses5-dev openssl libssl-dev fop xsltproc libxml2-utils unixodbc-dev git-core libwxbase2.8-0 libwxgtk2.8-0
+  sudo apt-get install -yq build-essential autoconf wget libncurses5-dev openssl libssl-dev fop xsltproc libxml2-utils unixodbc-dev git-core libwxbase2.8-0 libwxgtk2.8-0 curl
   wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_17.0-1~ubuntu~precise_amd64.deb
   sudo dpkg -i esl-erlang_17.0-1~ubuntu~precise_amd64.deb
   wget https://github.com/rebar/rebar/archive/2.5.1.tar.gz -O rebar-2.5.1.tar.gz
@@ -22,7 +22,6 @@ script : |
   make
   sudo mv rebar /bin/
   cd -
-  # wget https://github.com/elixir-lang/elixir/archive/v1.0.0.tar.gz -O elixir-1.0.0.tar.gz
   git clone https://github.com/elixir-lang/elixir.git 
   cd elixir
   git checkout v1.0.0
